old/airflow-deployment copy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: webserver
  name: airflow
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: webserver
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: webserver
    spec:
      serviceAccountName: apache-airflow-scheduler
      containers:
        - env:
            - name: EXECUTOR
              value: CeleryExecutor
            - name: FERNET_KEY
              value: 46BKJoQYlPPOexq0OhDZnIlNepKFf87WFwLbfzqDDho=
            - name: LOAD_EX
              value: "n"
            - name: AIRFLOW__CORE__SQL_ALCHEMY_CONN
              valueFrom:
                configMapKeyRef:
                  name: apache-airflow-config
                  key: sql_alchemy_conn
            - name: AIRFLOW__CORE__EXECUTOR
              valueFrom:
                configMapKeyRef:
                  name: apache-airflow-config
                  key: executor
            - name: AIRFLOW__CELERY__BROKER_URL
              valueFrom:
                configMapKeyRef:
                  name: apache-airflow-config
                  key: redis_conn_id
          image: docker.io/thescomcontainers/airflow:2.0.1
          name: scheduler
          command: [
              "sh",
              "-c",
              "airflow list_users || (airflow db init
              && airflow scheduler)",
            ]
          resources: {}
          volumeMounts:
            - name: dags-pv
              mountPath: /usr/local/airflow/dags
            - name: logs-pv
              mountPath: /usr/local/airflow/logs
            - name: spark-scripts-pv
              mountPath: /usr/local/airflow/spark-scripts
            - name: downloads-pv
              mountPath: /usr/local/airflow/downloads
            - name: plugins-pv
              mountPath: /usr/local/airflow/plugins
        - env:
            - name: EXECUTOR
              value: CeleryExecutor
            - name: FERNET_KEY
              value: 46BKJoQYlPPOexq0OhDZnIlNepKFf87WFwLbfzqDDho=
            - name: LOAD_EX
              value: "n"
            - name: AIRFLOW__CORE__SQL_ALCHEMY_CONN
              valueFrom:
                configMapKeyRef:
                  name: apache-airflow-config
                  key: sql_alchemy_conn
            - name: AIRFLOW__CORE__EXECUTOR
              valueFrom:
                configMapKeyRef:
                  name: apache-airflow-config
                  key: executor
            - name: AIRFLOW__CELERY__RESULT_BACKEND
              valueFrom:
                configMapKeyRef:
                  name: apache-airflow-config
                  key: airflow_web_sql_alchemy_conn
            - name: AIRFLOW__CELERY__BROKER_URL
              valueFrom:
                configMapKeyRef:
                  name: apache-airflow-config
                  key: redis_conn_id
          image: docker.io/thescomcontainers/airflow:2.0.1
          name: webserver
          ports:
            - containerPort: 8080
          resources: {}
        - env:
            - name: EXECUTOR
              value: CeleryExecutor
            - name: FLOWER_PORT
              value: "5555"
            - name: AIRFLOW__CELERY__FLOWER_BASIC_AUTH
              value: admin:admin
            - name: FERNET_KEY
              value: 46BKJoQYlPPOexq0OhDZnIlNepKFf87WFwLbfzqDDho=
            - name: LOAD_EX
              value: "n"
            - name: AIRFLOW__CORE__SQL_ALCHEMY_CONN
              valueFrom:
                configMapKeyRef:
                  name: apache-airflow-config
                  key: sql_alchemy_conn
            - name: AIRFLOW__CORE__EXECUTOR
              valueFrom:
                configMapKeyRef:
                  name: apache-airflow-config
                  key: executor
            - name: AIRFLOW__CELERY__RESULT_BACKEND
              valueFrom:
                configMapKeyRef:
                  name: apache-airflow-config
                  key: airflow_web_sql_alchemy_conn
          image: docker.io/thescomcontainers/airflow:2.0.1
          command: ["sh", "-c", "airflow list_users || (airflow celery flower)"]
          name: flower
          ports:
            - containerPort: 5555
          resources: {}
      volumes:
        - name: dags-pv
          persistentVolumeClaim:
            claimName: dags-pvc
        - name: logs-pv
          persistentVolumeClaim:
            claimName: logs-pvc
        - name: plugins-pv
          persistentVolumeClaim:
            claimName: plugins-pvc
        - name: downloads-pv
          persistentVolumeClaim:
            claimName: downloads-pvc
        - name: spark-scripts-pv
          persistentVolumeClaim:
            claimName: spark-scripts-pvc
status: {}
