old/flower-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: flower
  name: flower
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: flower
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: flower
    spec:
      serviceAccountName: apache-airflow-scheduler
      containers:
        - args:
            - flower
          image: docker.io/thescomcontainers/airflow:1.0.0
          name: flower
          ports:
            - containerPort: 5555
          resources: {}
      restartPolicy: Always
status: {}
