old/git-sync.yaml
apiVersion: apps/v1
kind: StatefulSet
#kind: Deployment
#kind: Job
metadata:
  name: git-sync-test
spec:
  selector:
    matchLabels:
      app: git-sync-test
  serviceName: "git-sync-test"
  replicas: 1
  template:
    metadata:
      labels:
        app: git-sync-test
    spec:
      containers:
      - name: git-sync-test
        image: docker.io/thescomcontainers/airflow:2.1.10
        volumeMounts:
        - name: service
          mountPath: /var/magic
      volumes:
      - name: service
        emptyDir: {}
      - name: git-secret
        secret:
          defaultMode: 256
          secretName: git-credsc3NoLXJzYSBBQUFBQjNOemFDMXljMkVBQUFBREFRQUJBQUFDQVFDL2pzeTdMVFdGbkxobWg5VjVHWXVua2VkcXNPbnFtd2RRUGV0dFlQS2VOLzVHK05OYWJmN2VhNDJLbER6L3JZbmNleHZKZ3FmNjJVb1hMMGZSME4vZHlBcFp3dG03RUdtZzNCN2N0VlRmN01WQVJidGYwcVhDTUdubXdQaTBLQTZuNml0dkxvbkpWb2hpbi9BTDB0bmR2VjM0VTBPbCtTUnBhSmI1VjhQRWpQQmNuT2lqd1UyTFdnNTQybmxXanJ0N1VYd1V6VWpCTTVhcC9FVDl5NjdaSXh1ek5VTWU4TTZMMEdXRW54OFFtaERjQ1Z3dklQODlsM1ZUWm80WHoyaC9sTHNUeEFCNmE4UmlNQnNSL01GY3FqVm5YTlJUKy9UVGY4dm8xeW1iR1NkR0pYdy9iNWNGcEdTV [...]
executor: CeleryExecutor
enablePodLaunching: true
