old/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: worker
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: worker
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/: "true"
        io.kompose.service: worker
    spec:
      containers:
        - args:
            - worker
          image: docker.io/thescomcontainers/airflow:2.1.10
          resources: {}
          volumeMounts:
            - name: dags-pv
              mountPath: /usr/local/airflow/dags
            - name: logs-pv
              mountPath: /usr/local/airflow/logs
            - name: spark-scripts-pv
              mountPath: /usr/local/airflow/spark-scripts
            - name: downloads-pv
              mountPath: /usr/local/airflow/downloads
            - name: plugins-pv
              mountPath: /usr/local/airflow/plugins
      volumes:
        - name: dags-pv
          persistentVolumeClaim:
            claimName: dags-pvc
        - name: logs-pv
          persistentVolumeClaim:
            claimName: logs-pvc
        - name: plugins-pv
          persistentVolumeClaim:
            claimName: plugins-pvc
        - name: downloads-pv
          persistentVolumeClaim:
            claimName: downloads-pvc
        - name: spark-scripts-pv
          persistentVolumeClaim:
            claimName: spark-scripts-pvc
status: {}
